[Autofill] Observe the web contents state and hide the save card bubble

Using more of WebContentsObserver to hide the bubble when the tab is
switched or closed.

Removing the TabStripModelObserver because the WebContentsObserver is
sufficient.

Bug: 783852
Test: Manual through interactive browser_tests
Change-Id: I14cb528ad04901cb9ca2526207673036a927b9ce
Reviewed-on: https://chromium-review.googlesource.com/775939
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517306}
Former-commit-id: a830d224129d0c04cfcf65a3f2c4091a8b30df47