chrome/browser/ui/autofill/save_card_bubble_controller_impl.h
@@ -83,6 +83,8 @@ class SaveCardBubbleControllerImpl
   // content::WebContentsObserver:
   void DidFinishNavigation(
       content::NavigationHandle* navigation_handle) override;
+  void WasHidden() override;
+  void WebContentsDestroyed() override;
 
  private:
   friend class content::WebContentsUserData<SaveCardBubbleControllerImpl>;
