chrome/browser/ui/views/autofill/save_card_icon_view.h
@@ -6,7 +6,6 @@
 #define CHROME_BROWSER_UI_VIEWS_AUTOFILL_SAVE_CARD_ICON_VIEW_H_
 
 #include "base/macros.h"
-#include "chrome/browser/ui/tabs/tab_strip_model_observer.h"
 #include "chrome/browser/ui/views/location_bar/bubble_icon_view.h"
 
 class Browser;
@@ -19,7 +18,7 @@ class SaveCardBubbleControllerImpl;
 // The location bar icon to show the Save Credit Card bubble where the user can
 // choose to save the credit card info to use again later without re-entering
 // it.
-class SaveCardIconView : public BubbleIconView, public TabStripModelObserver {
+class SaveCardIconView : public BubbleIconView {
  public:
   explicit SaveCardIconView(CommandUpdater* command_updater, Browser* browser);
   ~SaveCardIconView() override;
@@ -29,9 +28,6 @@ class SaveCardIconView : public BubbleIconView, public TabStripModelObserver {
   void OnExecuting(BubbleIconView::ExecuteSource execute_source) override;
   views::BubbleDialogDelegateView* GetBubble() const override;
   const gfx::VectorIcon& GetVectorIcon() const override;
-
-  // TabStripModelObserver:
-  void TabDeactivated(content::WebContents* contents) override;
 
  private:
   SaveCardBubbleControllerImpl* GetController() const;
