chrome/browser/ui/autofill/save_card_bubble_controller_impl_browsertest.cc
@@ -12,7 +12,9 @@
 #include "chrome/browser/ui/browser.h"
 #include "chrome/browser/ui/tabs/tab_strip_model.h"
 #include "chrome/browser/ui/test/test_browser_dialog.h"
+#include "chrome/common/url_constants.h"
 #include "chrome/test/base/in_process_browser_test.h"
+#include "chrome/test/base/ui_test_utils.h"
 #include "components/autofill/core/browser/autofill_test_utils.h"
 #include "testing/gtest/include/gtest/gtest.h"
 
@@ -42,25 +44,27 @@ class SaveCardBubbleControllerImplTest : public DialogBrowserTest {
     // Do lazy initialization of SaveCardBubbleControllerImpl. Alternative:
     // invoke via ChromeAutofillClient.
     SaveCardBubbleControllerImpl::CreateForWebContents(web_contents);
-    SaveCardBubbleControllerImpl* controller =
-        SaveCardBubbleControllerImpl::FromWebContents(web_contents);
-    DCHECK(controller);
+    controller_ = SaveCardBubbleControllerImpl::FromWebContents(web_contents);
+    DCHECK(controller_);
 
     // Behavior depends on the test case name (not the most robust, but it will
     // do).
-    if (name.find("Local") != std::string::npos) {
-      controller->ShowBubbleForLocalSave(test::GetCreditCard(),
-                                         base::Bind(&base::DoNothing));
+    if (name == "Local") {
+      controller_->ShowBubbleForLocalSave(test::GetCreditCard(),
+                                          base::Bind(&base::DoNothing));
     } else {
-      CreditCard card = test::GetMaskedServerCard();
-      bool should_cvc_be_requested = name.find("Cvc") != std::string::npos;
-      controller->ShowBubbleForUpload(card, GetTestLegalMessage(),
-                                      should_cvc_be_requested,
-                                      base::Bind(&base::DoNothing));
+      bool should_cvc_be_requested = name == "Server_WithCvcStep";
+      controller_->ShowBubbleForUpload(
+          test::GetMaskedServerCard(), GetTestLegalMessage(),
+          should_cvc_be_requested, base::Bind(&base::DoNothing));
     }
   }
 
+  SaveCardBubbleControllerImpl* controller() { return controller_; }
+
  private:
+  SaveCardBubbleControllerImpl* controller_ = nullptr;
+
   DISALLOW_COPY_AND_ASSIGN(SaveCardBubbleControllerImplTest);
 };
 
@@ -82,6 +86,19 @@ IN_PROC_BROWSER_TEST_F(SaveCardBubbleControllerImplTest, InvokeDialog_Server) {
 IN_PROC_BROWSER_TEST_F(SaveCardBubbleControllerImplTest,
                        InvokeDialog_Server_WithCvcStep) {
   RunDialog();
+}
+
+// Tests that opening a new tab will hide the save card bubble.
+IN_PROC_BROWSER_TEST_F(SaveCardBubbleControllerImplTest, NewTabHidesDialog) {
+  ShowDialog("Local");
+  EXPECT_NE(nullptr, controller()->save_card_bubble_view());
+  // Open a new tab page in the foreground.
+  ui_test_utils::NavigateToURLWithDisposition(
+      browser(), GURL(chrome::kChromeUINewTabURL),
+      WindowOpenDisposition::NEW_FOREGROUND_TAB,
+      ui_test_utils::BROWSER_TEST_WAIT_FOR_TAB |
+          ui_test_utils::BROWSER_TEST_WAIT_FOR_NAVIGATION);
+  EXPECT_EQ(nullptr, controller()->save_card_bubble_view());
 }
 
 }  // namespace autofill
